[package]
name = "tkrpbot"
version = "0.1.0"
authors = ["Pedro Costa Neves <costa.neves@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "*"
openssl = "*"
postgres-openssl = "*"
gotham = "*"
serde = "*"
reqwest = { version = "*", features = ["json"] }
